--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto Mono", sans-serif;
-  font-size: 12;
+  font-size: 0.8em;
 }
 
 .frame::-webkit-scrollbar {
